# gf

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml  main.yml
app/: .pylintrc  Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  manage.py  mypy.ini
app/authentication/: urls.py
app/authentication/adapters/: __init__.py  account_adapter.py
app/authentication/auth_backends/: __init__.py  session_auth.py
app/authentication/forms/: __init__.py  custom_signup_form.py
app/authentication/migrations/: 0001_initial.py
app/authentication/models/: user.py
app/authentication/permissions/: __init__.py  is_authenticated.py  is_growthfoundry_user.py  is_user_inside_tenant.py
app/authentication/repositories/: user.py
app/authentication/serializers/: user.py
app/authentication/views_api/: __init__.py  user.py  users.py
app/core/: celery.py  settings.py  settings_debug_toolbar.py  settings_logging.py  templates_context.py  urls.py  views.py
app/core/services/: __init__.py  (+1 more)
app/marketing/: urls.py
app/static/: staticfiles.json
app/teams/: urls.py
app/tests/: conftest.py  test_settings.py
app/utils/: email.py  models.py
blog/: Dockerfile  wp-config.php
nginx/: Dockerfile  fullchain.pem.example  nginx.conf  privkey.pem.example
webpack/: .eslintrc  .stylelintrc  babel.config.js  package-lock.json  package.json  webpack.config.js
webpack/services/: client.js
webpack/src/: index.js
(+161 files in other folders)
